<resources>
    <string name="app_name">CustomPlus</string>
    <string name="customplus">CustomPlus</string>
    <string name="transportation">Transportation</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_fragment">Statistics Fragment</string>
    <string name="transportation_fragment">Transportation Fragment</string>
    <string name="transportation_bus_fragment">transportation/bus fragment</string>
    <string name="transportation_railway_fragment">transportation/railway fragment</string>
    <string name="transportation_subway_fragment">transportation/subway fragment</string>
    <string name="request_failed">Request Failed</string>
    <string name="retry">Retry</string>
    <string name="from">From</string>
    <string name="airport">Airport</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="to">To</string>
    <string name="next_train">Next train:</string>

    <string name="shenzhen_north">Shenzhen North</string>
    <string name="west_kowloon">West Kowloon</string>
    <string name="loading">Loading...</string>
</resources>