<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:id="@+id/spinner_subway"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/direction_1"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:cardCornerRadius="4dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_subway"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/no_data_block">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="NO DATA"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card1_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/from_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp">

                <TextView
                    android:id="@+id/from_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBottomOf="parent"/>
                <TextView
                    android:id="@+id/direction_1_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airport"
                    android:textSize="25sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/from_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/from_block"
                app:layout_constraintLeft_toRightOf="@id/from_block"
                app:layout_constraintRight_toLeftOf="@id/to_block"
                app:layout_constraintTop_toTopOf="@id/from_block" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/to_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/from_block"
                app:layout_constraintBottom_toBottomOf="@id/from_block"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp">

                <TextView
                    android:id="@+id/to_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBottomOf="parent"/>
                <TextView
                    android:id="@+id/direction_1_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hong_kong"
                    android:textSize="25sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/to_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/from_block">

                <TextView
                    android:id="@+id/next_train"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/next_train"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/direction_1_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15:30:24"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="@+id/next_train"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/next_train"
                    app:layout_constraintTop_toTopOf="@+id/next_train" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/ontime_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="On time"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/checkmark"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/checkmark"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/checkmark"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="@id/ontime_text1"
                app:layout_constraintLeft_toRightOf="@id/ontime_text1"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/direction_2"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="200dp"
        card_view:cardCornerRadius="4dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        card_view:layout_constraintTop_toBottomOf="@id/direction_1"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/from_block2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp">

            <TextView
                android:id="@+id/from_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBottomOf="parent"/>
            <TextView
                android:id="@+id/direction_2_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airport"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_text2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/from_block2"
            app:layout_constraintLeft_toRightOf="@id/from_block2"
            app:layout_constraintRight_toLeftOf="@id/to_block2"
            app:layout_constraintTop_toTopOf="@id/from_block2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/to_block2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/from_block2"
            app:layout_constraintBottom_toBottomOf="@id/from_block2"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/to_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBottomOf="parent"/>
            <TextView
                android:id="@+id/direction_2_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hong_kong"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_text2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_block2">

            <TextView
                android:id="@+id/next_train2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="40dp"
                android:text="@string/next_train"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/direction_2_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15:30:24"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@+id/next_train2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/next_train2"
                app:layout_constraintTop_toTopOf="@+id/next_train2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/ontime_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="On time"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toStartOf="@+id/checkmark2"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/checkmark2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/checkmark"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="@id/ontime_text2"
            app:layout_constraintLeft_toRightOf="@id/ontime_text2"
            app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/refresh_button"
        android:text="Refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/direction_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>